[project]
name = "auth"
version = "0.1.0"
description = ""
authors = [
    {name = "kristinabykova",email = "kristina.bykova.03@list.ru"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "jwt (>=1.4.0,<2.0.0)",
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn (>=0.44.0,<0.45.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
